--- a/templates/almovconsdia_ingresos_add.htm
+++ b/templates/almovconsdia_ingresos_add.htm
@@ -869,8 +869,7 @@
 								</td>
 			{END cellblock_grid_c10}
 			 
-		
-							
+																
 
 {BEGIN cellblock_grid_c12}
 <td
@@ -879,31 +878,36 @@
 	
 			data-single
 			
-			data-cellId="grid_c12" data-pageid="{$pageid}"
-		data-v-cell="2"
+	ocolspan="2"		data-cellId="grid_c12" data-pageid="{$pageid}"
+		data-v-cell="4"
 		
 >
 	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c12}
-			 
-		
-							
+				
+{BEGIN mcd_obs_fieldblock}
 
-{BEGIN cellblock_grid_c18}
-<td
-	{$cell_grid_c18}
-	class=" r-ori-vert"
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_mcd_obs}  r-vertical-field" 
+	data-signal-error-for="mcd_obs{$id}" {$required_attr_mcd_obs}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field3" {$item_integrated_edit_field3} data-pageid="{$pageid}" data-field="mcd_obs" data-fieldname="mcd_obs" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_mcd_obs}">
+		{BEGIN mcd_obs_label}{$label almovconsdia_ingresos mcd_obs }{END mcd_obs_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$mcd_obs_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="mcd_obs" {$tooltipAttr almovconsdia_ingresos mcd_obs } >
+		<div class="text-muted" >
+		{$tooltip almovconsdia_ingresos mcd_obs }		</div>
+	</div>
+</div>
+
+
+{END mcd_obs_fieldblock}
 	
-			data-single
-			
-			data-cellId="grid_c18" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c18}
+								</td>
+			{END cellblock_grid_c12}
 								</tr>
 			</tbody></table>
 {END grid_block}
