--- a/styles/pages/almovconsdia_ingresos_list.css
+++ b/styles/pages/almovconsdia_ingresos_list.css
@@ -28,6 +28,9 @@
 [data-cellid="grid_cell_icons"][data-page="almovconsdia_ingresos_list"][data-cellid="grid_cell_icons"][data-page="almovconsdia_ingresos_list"][data-cellid="grid_cell_icons"][data-page="almovconsdia_ingresos_list"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field7"][data-page="almovconsdia_ingresos_list"][data-cellid="grid_footcell_field7"][data-page="almovconsdia_ingresos_list"][data-cellid="grid_footcell_field7"][data-page="almovconsdia_ingresos_list"] {
+  white-space: nowrap;
+}
 [data-page="almovconsdia_ingresos_list"][data-itemid="grid_field_totals"] {
   font-weight: bold;
 }
