--- a/styles/pages/almovconsdia_ingresos_print.css
+++ b/styles/pages/almovconsdia_ingresos_print.css
@@ -16,6 +16,9 @@
 [data-cellid="grid_footcell_field5"][data-page="almovconsdia_ingresos_print"][data-cellid="grid_footcell_field5"][data-page="almovconsdia_ingresos_print"][data-cellid="grid_footcell_field5"][data-page="almovconsdia_ingresos_print"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field6"][data-page="almovconsdia_ingresos_print"][data-cellid="grid_footcell_field6"][data-page="almovconsdia_ingresos_print"][data-cellid="grid_footcell_field6"][data-page="almovconsdia_ingresos_print"] {
+  white-space: nowrap;
+}
 [data-page="almovconsdia_ingresos_print"][data-itemid="simple_grid_field11"] {
   font-weight: bold;
 }
