--- a/styles/pages/gedocumentos_egresos_consumo_list.css
+++ b/styles/pages/gedocumentos_egresos_consumo_list.css
@@ -40,6 +40,9 @@
 [data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_list"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field9"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field9"][data-page="gedocumentos_egresos_consumo_list"][data-cellid="grid_footcell_field9"][data-page="gedocumentos_egresos_consumo_list"] {
+  white-space: nowrap;
+}
 [data-page="gedocumentos_egresos_consumo_list"][data-itemid="add"] > .btn {
   font-family: "Roboto";
 }
