--- a/styles/pages/gedocumentos_egresos_consumo_masterlist.css
+++ b/styles/pages/gedocumentos_egresos_consumo_masterlist.css
@@ -31,6 +31,9 @@
 [data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_masterlist"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_masterlist"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_masterlist"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_masterlist"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_masterlist"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_egresos_consumo_masterlist"] {
+  white-space: nowrap;
+}
 [data-cellid="grid_headcell_icons"][data-page="gedocumentos_egresos_consumo_masterlist"][data-cellid="grid_headcell_icons"][data-page="gedocumentos_egresos_consumo_masterlist"][data-cellid="grid_headcell_icons"][data-page="gedocumentos_egresos_consumo_masterlist"] {
   width: 30px;
 }
