--- a/styles/pages/gedocumentos_egresos_consumo_print.css
+++ b/styles/pages/gedocumentos_egresos_consumo_print.css
@@ -25,6 +25,9 @@
 [data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_print"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_print"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_egresos_consumo_print"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field7"][data-page="gedocumentos_egresos_consumo_print"][data-cellid="grid_footcell_field7"][data-page="gedocumentos_egresos_consumo_print"][data-cellid="grid_footcell_field7"][data-page="gedocumentos_egresos_consumo_print"] {
+  white-space: nowrap;
+}
 [data-page="gedocumentos_egresos_consumo_print"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
 }
