--- a/templates/gedocumentos_egresos_consumo_add.htm
+++ b/templates/gedocumentos_egresos_consumo_add.htm
@@ -950,11 +950,135 @@
 														<tr {$row_grid_6} >
 										
 
+{BEGIN cellblock_grid_c14}
+<td
+	{$cell_grid_c14}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c14" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN do_email_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_do_email}  r-vertical-field" 
+	data-signal-error-for="do_email{$id}" {$required_attr_do_email}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field17" {$item_integrated_edit_field17} data-pageid="{$pageid}" data-field="do_email" data-fieldname="do_email" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_do_email}">
+		{BEGIN do_email_label}{$label gedocumentos_egresos_consumo do_email }{END do_email_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$do_email_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="do_email" {$tooltipAttr gedocumentos_egresos_consumo do_email } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_egresos_consumo do_email }		</div>
+	</div>
+</div>
+
+
+{END do_email_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c14}
+			 
+																
+
+{BEGIN cellblock_grid_c15}
+<td
+	{$cell_grid_c15}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c15" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN do_depsup_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_do_depsup}  r-vertical-field" 
+	data-signal-error-for="do_depsup{$id}" {$required_attr_do_depsup}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field13" {$item_integrated_edit_field13} data-pageid="{$pageid}" data-field="do_depsup" data-fieldname="do_depsup" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_do_depsup}">
+		{BEGIN do_depsup_label}{$label gedocumentos_egresos_consumo do_depsup }{END do_depsup_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$do_depsup_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="do_depsup" {$tooltipAttr gedocumentos_egresos_consumo do_depsup } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_egresos_consumo do_depsup }		</div>
+	</div>
+</div>
+
+
+{END do_depsup_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c15}
+			 
+																
+
+{BEGIN cellblock_grid_c16}
+<td
+	{$cell_grid_c16}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c16" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN do_dep_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_do_dep}  r-vertical-field" 
+	data-signal-error-for="do_dep{$id}" {$required_attr_do_dep}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field12" {$item_integrated_edit_field12} data-pageid="{$pageid}" data-field="do_dep" data-fieldname="do_dep" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_do_dep}">
+		{BEGIN do_dep_label}{$label gedocumentos_egresos_consumo do_dep }{END do_dep_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$do_dep_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="do_dep" {$tooltipAttr gedocumentos_egresos_consumo do_dep } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_egresos_consumo do_dep }		</div>
+	</div>
+</div>
+
+
+{END do_dep_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c16}
+								</tr>
+	 
+	 
+														<tr {$row_grid_7} >
+										
+
 {BEGIN cellblock_grid_c13}
 <td
 	{$cell_grid_c13}
 	class=" r-ori-vert"
 	
+			data-single
 			
 	ocolspan="3"		data-cellId="grid_c13" data-pageid="{$pageid}"
 		data-v-cell="6"
@@ -983,50 +1107,6 @@
 
 
 {END do_file_fieldblock}
-											
-{BEGIN do_dep_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_dep}  r-vertical-field" 
-	data-signal-error-for="do_dep{$id}" {$required_attr_do_dep}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field12" {$item_integrated_edit_field12} data-pageid="{$pageid}" data-field="do_dep" data-fieldname="do_dep" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_do_dep}">
-		{BEGIN do_dep_label}{$label gedocumentos_egresos_consumo do_dep }{END do_dep_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$do_dep_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="do_dep" {$tooltipAttr gedocumentos_egresos_consumo do_dep } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_egresos_consumo do_dep }		</div>
-	</div>
-</div>
-
-
-{END do_dep_fieldblock}
-											
-{BEGIN do_depsup_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_depsup}  r-vertical-field" 
-	data-signal-error-for="do_depsup{$id}" {$required_attr_do_depsup}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field13" {$item_integrated_edit_field13} data-pageid="{$pageid}" data-field="do_depsup" data-fieldname="do_depsup" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_do_depsup}">
-		{BEGIN do_depsup_label}{$label gedocumentos_egresos_consumo do_depsup }{END do_depsup_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$do_depsup_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="do_depsup" {$tooltipAttr gedocumentos_egresos_consumo do_depsup } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_egresos_consumo do_depsup }		</div>
-	</div>
-</div>
-
-
-{END do_depsup_fieldblock}
 	
 								</td>
 			{END cellblock_grid_c13}
