--- a/templates/gedocumentos_egresos_consumo_masterlist.htm
+++ b/templates/gedocumentos_egresos_consumo_masterlist.htm
@@ -91,7 +91,7 @@
 	 
 		{BEGIN doclasedoc_id_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc_id" data-fieldname="doclasedoc_id" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field8" {$item_simple_grid_field8} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc_id" data-fieldname="doclasedoc_id" 
 
 	
 	
@@ -121,7 +121,7 @@
 	 
 		{BEGIN do_nrodoc_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field8" {$item_simple_grid_field8} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_nrodoc" data-fieldname="do_nrodoc" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field10" {$item_simple_grid_field10} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_nrodoc" data-fieldname="do_nrodoc" 
 
 	
 	
@@ -151,7 +151,7 @@
 	 
 		{BEGIN do_fechadoc_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field10" {$item_simple_grid_field10} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_fechadoc" data-fieldname="do_fechadoc" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field13" {$item_simple_grid_field13} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_fechadoc" data-fieldname="do_fechadoc" 
 
 	
 	
@@ -181,7 +181,7 @@
 	 
 		{BEGIN docodregion_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field13" {$item_simple_grid_field13} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docodregion" data-fieldname="docodregion" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docodregion" data-fieldname="docodregion" 
 
 	
 	
@@ -211,7 +211,7 @@
 	 
 		{BEGIN do_detalle_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_detalle" data-fieldname="do_detalle" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field15" {$item_simple_grid_field15} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_detalle" data-fieldname="do_detalle" 
 
 	
 	
@@ -241,7 +241,7 @@
 	 
 		{BEGIN do_tipomov_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field15" {$item_simple_grid_field15} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_tipomov" data-fieldname="do_tipomov" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_tipomov" data-fieldname="do_tipomov" 
 
 	
 	
@@ -271,7 +271,7 @@
 	 
 		{BEGIN doclasedoc_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc" data-fieldname="doclasedoc" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field18" {$item_simple_grid_field18} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="doclasedoc" data-fieldname="doclasedoc" 
 
 	
 	
@@ -301,7 +301,7 @@
 	 
 		{BEGIN docnomproveedor_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field18" {$item_simple_grid_field18} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docnomproveedor" data-fieldname="docnomproveedor" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field19" {$item_simple_grid_field19} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="docnomproveedor" data-fieldname="docnomproveedor" 
 
 	
 	
@@ -331,7 +331,7 @@
 	 
 		{BEGIN do_concepto_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field19" {$item_simple_grid_field19} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_concepto" data-fieldname="do_concepto" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field20" {$item_simple_grid_field20} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_concepto" data-fieldname="do_concepto" 
 
 	
 	
@@ -361,7 +361,7 @@
 	 
 		{BEGIN resolfecha_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field20" {$item_simple_grid_field20} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolfecha" data-fieldname="resolfecha" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field21" {$item_simple_grid_field21} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolfecha" data-fieldname="resolfecha" 
 
 	
 	
@@ -391,7 +391,7 @@
 	 
 		{BEGIN resolnum_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field21" {$item_simple_grid_field21} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolnum" data-fieldname="resolnum" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field22" {$item_simple_grid_field22} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="resolnum" data-fieldname="resolnum" 
 
 	
 	
@@ -405,6 +405,36 @@
 	
 	</th>
 	{END cellblock_grid_headcell_field10}
+									{BEGIN cellblock_grid_headcell_field11}
+	<th
+	
+	{$cell_grid_headcell_field11}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$do_email_class}	"
+
+			data-field="do_email"
+	
+	data-cellId="grid_headcell_field11" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN do_email_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field23" {$item_simple_grid_field23} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_email" data-fieldname="do_email" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label gedocumentos_egresos_consumo do_email }</span>
+			</span>
+	</span>
+{END do_email_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field11}
 							</tr>
 															
 					{END grid_header}
@@ -672,6 +702,27 @@
 {END resolnum_fieldcolumn}	
 	</td>
 	{END cellblock_grid_cell_field10}
+									{BEGIN cellblock_grid_cell_field11}
+	<td
+	
+	{$cell_grid_cell_field11}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$do_email_class}	"
+
+			data-field="do_email"
+	
+	data-cellId="grid_cell_field11" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN do_email_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="do_email" data-fieldname="do_email" data-default-width >
+{$do_email_value}
+</span>
+{END do_email_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field11}
 							</tr>
 										
 											{END grid_row}
@@ -863,6 +914,21 @@
 	
 	</td>
 	{END cellblock_grid_footcell_field10}
+									{BEGIN cellblock_grid_footcell_field11}
+	<td
+	
+	{$cell_grid_footcell_field11}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$do_email_class}	"
+
+	
+	data-cellId="grid_footcell_field11" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="gedocumentos_egresos_consumo_masterlist"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field11}
 							</tr>
 					
 					</tfoot>
