--- a/templates/gedocumentos_egresos_consumo_view.htm
+++ b/templates/gedocumentos_egresos_consumo_view.htm
@@ -903,6 +903,126 @@
 														<tr {$row_grid_6} >
 										
 
+{BEGIN cellblock_grid_c14}
+<td
+	{$cell_grid_c14}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c14" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN do_email_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_do_email}  r-vertical-field" data-fieldname="do_email" data-signal-error-for="do_email{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field17" {$item_integrated_edit_field17} data-pageid="{$pageid}" data-field="do_email" data-fieldname="do_email" data-compact >
+
+		<div class="col-md-12">
+	
+	<label class="" for="{$labelfor_do_email}">
+		
+		{BEGIN do_email_label}{$label gedocumentos_egresos_consumo do_email }{END do_email_label}
+	</label>
+	<div class="" >
+		{$do_email_value}	</div>
+
+		</div>
+		
+</div>
+
+
+{END do_email_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c14}
+			 
+																
+
+{BEGIN cellblock_grid_c15}
+<td
+	{$cell_grid_c15}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c15" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN do_depsup_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_do_depsup}  r-vertical-field" data-fieldname="do_depsup" data-signal-error-for="do_depsup{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field13" {$item_integrated_edit_field13} data-pageid="{$pageid}" data-field="do_depsup" data-fieldname="do_depsup" data-compact >
+
+		<div class="col-md-12">
+	
+	<label class="" for="{$labelfor_do_depsup}">
+		
+		{BEGIN do_depsup_label}{$label gedocumentos_egresos_consumo do_depsup }{END do_depsup_label}
+	</label>
+	<div class="" >
+		{$do_depsup_value}	</div>
+
+		</div>
+		
+</div>
+
+
+{END do_depsup_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c15}
+			 
+																
+
+{BEGIN cellblock_grid_c16}
+<td
+	{$cell_grid_c16}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c16" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN do_dep_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_do_dep}  r-vertical-field" data-fieldname="do_dep" data-signal-error-for="do_dep{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field12" {$item_integrated_edit_field12} data-pageid="{$pageid}" data-field="do_dep" data-fieldname="do_dep" data-compact >
+
+		<div class="col-md-12">
+	
+	<label class="" for="{$labelfor_do_dep}">
+		
+		{BEGIN do_dep_label}{$label gedocumentos_egresos_consumo do_dep }{END do_dep_label}
+	</label>
+	<div class="" >
+		{$do_dep_value}	</div>
+
+		</div>
+		
+</div>
+
+
+{END do_dep_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c16}
+								</tr>
+	 
+	 
+														<tr {$row_grid_7} >
+										
+
 {BEGIN cellblock_grid_c13}
 <td
 	{$cell_grid_c13}
