--- a/templates/_global_login.htm
+++ b/templates/_global_login.htm
@@ -196,7 +196,7 @@ Donaciones | Ver. 1.0.1</span>
 			</div>
 			<div class="r-sideimage">
 							<div class="r-image"  >
-					<img data-itemtype="page_image" data-itemid="page_image_ash8f23hr" {$item_page_image_ash8f23hr} data-pageid="{$pageid}" src="images/clipart/photo/studio-proper-4dqhR6dtbOs-unsplash.jpg" />
+					<img data-itemtype="page_image" data-itemid="page_image_ash8f23hr" {$item_page_image_ash8f23hr} data-pageid="{$pageid}" src="images/AdobeStock_372378390.jpeg" />
 				</div>
 						</div>
 		</div>
